# data-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  config.py  deploy.sh  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py
api/routes/: companies.py  enrichment.py  export.py  financial.py  jobs.py  procurement.py
crawlers/: items.py  middlewares.py  pipelines.py  settings.py
crawlers/spiders/: base_spider.py  cadastral_spider.py  financial_spider.py  procurement_spider.py
db/: repository.py  session.py
db/models/: __init__.py  audit.py  company.py  financial.py  partner.py  procurement.py  source.py
deploy/grafana/dashboards/: overview.json
deploy/grafana/provisioning/dashboards/: dashboard.yml
deploy/prometheus/: prometheus.yml
enrichment/: pipeline.py  scorer.py
etl/: deduplicator.py  normalizers.py  validators.py
export/: __init__.py  base.py  csv_exporter.py  sped_exporter.py  xml_exporter.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_fulltext_search.py  0003_webhooks.py
monitoring/: alerts.py  metrics.py
scheduler/: tasks.py
scripts/: seed_from_api.py
sources/: __init__.py  base.py  brasilapi.py  cache.py  cnpja.py
static/: index.html
tests/: test_api_health.py  test_cache.py  test_deduplicator.py  test_enrichment.py  test_export.py  test_normalizers.py  test_sources.py  test_validators.py  test_webhooks.py
webhooks/: dispatcher.py  models.py  router.py
