[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "data-collector"
version = "0.1.0"
description = "Sistema de coleta de dados empresariais web para ERP"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery>=5.4",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "testcontainers>=4.4",
]

[tool.setuptools.packages.find]
include = ["db*", "api*", "etl*", "crawlers*", "scheduler*", "monitoring*", "config*", "sources*", "webhooks*", "enrichment*", "export*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["F821"]

[tool.mypy]
strict = false
ignore_missing_imports = true
